force-app/main/default/objects/AtecoMatrix__c/AtecoMatrix__c.object-meta.xml
<CustomObject>
    <description>Oggetto tecnico (matrice) per la gestione dei codici Ateco e relative tipizazioni</description>
    <label>Matrice Ateco</label>
    <nameField>
        <label>Matrice Ateco Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matrice Ateco</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>