force-app/main/default/objects/AtecoMatrix__c/fields/AtecoCode__c.field-meta.xml
<CustomField>
    <fullName>AtecoCode__c</fullName>
    <label>Codice Ateco</label>
    <length>10</length>
    <type>Text</type>
</CustomField>