force-app/main/default/objects/AtecoMatrix__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>