force-app/main/default/objects/AtecoMatrix__c/fields/IstatCode__c.field-meta.xml
<CustomField>
    <fullName>IstatCode__c</fullName>
    <label>Codice Istat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>