force-app/main/default/objects/AtecoMatrix__c/fields/RonchiCode__c.field-meta.xml
<CustomField>
    <fullName>RonchiCode__c</fullName>
    <label>Codice Ronchi</label>
    <length>10</length>
    <type>Text</type>
</CustomField>