force-app/main/default/objects/AtecoMatrix__c/fields/RonchiDescription__c.field-meta.xml
<CustomField>
    <fullName>RonchiDescription__c</fullName>
    <label>Descrizione Ronchi</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>