force-app/main/default/objects/AtecoMatrix__c/fields/RonchiSubcategory__c.field-meta.xml
<CustomField>
    <fullName>RonchiSubcategory__c</fullName>
    <label>Sottocategoria Ronchi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>