force-app/main/default/objects/AtecoMatrix__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sottotipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>